Remove min-width from options page CSS to prevent unnecessary horizontal scrolling.

--- a/options/css/style.css
+++ b/options/css/style.css
@@ -8,7 +8,6 @@ input[type='text'] {
 
 .form-horizontal .controls {
 	margin-left: 0;
-	min-width: 745px;
 }
 
 .controls .action-buttons {
